# RDT-Adaptive-Hierarchies

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  REFERENCES.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: FIGURE_INDEX.md  benchmark_interpretation.md  claims_and_evidence.md  definitions.md  examples.md  framework_specification.md  known_limitations.md  overview.md  provenance.md  relation_to_prior_work.md  reproducibility.md
examples/: cover_basic.py  cover_hypothesis_basic.py  geometry_validation_basic.py  residual_sampler_research_demo.py  stable_partition_basic.py
paper/: README.md  figures_plan.md  manuscript.md  methods_notes.md  outline.md  references.bib
results/: README.md
results/raw/ablation_5seed_2026-05-18/: ABLATION_RESULTS.md  ablation_results.json  ablation_summary.csv
results/raw/artifact_performance_5seed_2026-05-18/: ARTIFACT_AND_PERFORMANCE_RESULTS.md  artifact_check_results.json  artifact_check_summary.csv
results/raw/deep_validation_2026-05-18/cover/: COVER_RESULT_CARD.md  cover_results.json  cover_summary.csv
results/raw/deep_validation_2026-05-18/geometry/: GEOMETRY_RESULT_CARD.md  geometry_integral_summary.csv  geometry_results.json  geometry_summary.csv
results/raw/deep_validation_2026-05-18/performance_scaling/: PERFORMANCE_SCALING_RESULT_CARD.md  cover_scaling.csv  performance_scaling_results.json  stable_partition_scaling.csv
results/raw/deep_validation_2026-05-18/residual_sampler/: RESIDUAL_SAMPLER_RESULT_CARD.md  residual_sampler_results.json  residual_sampler_summary.csv
results/raw/deep_validation_2026-05-18/stable_partition/: STABLE_PARTITION_RESULT_CARD.md  stable_partition_results.json  stable_partition_summary.csv
results/raw/geometry_validation_2026-05-18/: GEOMETRY_RESULT_CARD.md  geometry_results.json
results/raw/real_public_data_2026-05-18/: REAL_PUBLIC_DATA_RESULTS.md  real_public_data_results.json  real_public_data_summary.csv
results/raw/release_hardening_2026-05-18/cover/: COVER_RESULT_CARD.md  cover_results.json  cover_summary.csv
results/raw/release_hardening_2026-05-18/stable_partition/: STABLE_PARTITION_RESULT_CARD.md  stable_partition_results.json  stable_partition_summary.csv
results/raw/reproduce_deep_5seed_2026-05-18/: AGGREGATE_RESULTS.md  aggregate_results.json  aggregate_summary.csv
results/raw/reproduce_deep_5seed_2026-05-18/seed_0/: RESULTS.md  (+2 more)
results/summary_tables/: artifact_controls.md  codec_and_drift_summary.md  cover_summary.md  geometry_summary.md  missing_baselines.md  package_install_validation.md  performance_scaling.md  residual_sampler_summary.md  stable_partition_summary.md  statistical_rigor.md
src/rdt_adaptive_hierarchy/: __init__.py
src/rdt_adaptive_hierarchy/applications/: __init__.py  cover.py  geometry_validation.py  hypothesis_strategies.py  residual_sampler.py  shell_diagnostics.py  stable_partition.py
src/rdt_adaptive_hierarchy/baselines/: __init__.py  geospatial.py  grid.py  halton.py  hilbert.py  hypothesis_sampling.py  jump_hash.py  latin_hypercube.py  morton.py  random_sampling.py  rendezvous_hash.py  sobol.py  virtual_node_hash.py
src/rdt_adaptive_hierarchy/benchmarks/: __init__.py  cover_bench.py  cover_property_bench.py  geometry_bench.py  memory.py  performance_scaling.py  residual_sampler_bench.py  stable_partition_bench.py
src/rdt_adaptive_hierarchy/core/: __init__.py  cells.py  coverage.py  hierarchy.py  labels.py  metrics.py  rdt_v1.py  refinement.py  validation.py
tests/: test_ablation_reproduces.py  test_baselines.py  test_cover_generation.py  test_cover_property_bench.py  test_determinism.py  test_examples_run.py  test_geometry_validation.py  test_hypothesis_integration.py  test_partition_metrics.py  test_stable_labels.py  test_stable_partition_stress.py
(+27 files in other folders)
